--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,20 @@
 <h2>{{titulo}}</h2>
+<br>
+{{fecha| date:'dd/MM/yyyy'}}
+-
+{{fecha| date:'fullDate' | uppercase}}
+-
+{{nombre | lowercase}}
+-
+{{5 | conversor: 7}}
+<br/>
+
+<input type="text" [(ngModel)]='prenda_a_guardar'><button (click)='guardarPrenda()'>Añadir Prenda</button>
+<span>La prenda a guardar es: {{prenda_a_guardar}}</span>
+<h3>Listado de prendas de ropa</h3>
+<ul>
+    <li *ngFor='let prenda of listado_ropa; let i = index'>
+        {{prenda}}
+        <button (click)='eliminarPrenda(i)'>Eliminar</button>
+    </li>
+</ul>
