--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,10 @@
   <a [routerLink]="['/contacto']" [routerLinkActive]="['activado']">
     Contacto
   </a>
+  - 
+  <a [routerLink]="['/coches']" [routerLinkActive]="['activado']">
+    Coches
+  </a>
 </nav>
 <hr/>
 <router-outlet></router-outlet>
